--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ds-dashboard",
+  "name": "vue3",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,9 +10,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "axios": "^0.26.1",
+    "babel-eslint": "^10.1.0",
     "core-js": "^3.8.3",
+    "tiny-emitter": "^2.1.0",
+    "vee-validate": "^4.5.11",
     "vue": "^3.2.13",
-    "vuex": "^4.0.0"
+    "vue-router": "^4.0.14",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -20,12 +26,13 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-e2e-cypress": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-unit-jest": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-standard": "^6.1.0",
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
+    "autoprefixer": "^10.4.4",
     "babel-jest": "^27.0.6",
     "cypress": "^8.3.0",
     "eslint": "^7.32.0",
@@ -34,7 +41,9 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
-    "lint-staged": "^11.1.2"
+    "lint-staged": "^11.1.2",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
