--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.26.1",
     "babel-eslint": "^10.1.0",
     "core-js": "^3.8.3",
+    "supertest": "^6.2.4",
     "tiny-emitter": "^2.1.0",
     "vee-validate": "^4.5.11",
     "vue": "^3.2.13",
@@ -34,7 +35,7 @@
     "@vue/vue3-jest": "^27.0.0-alpha.1",
     "autoprefixer": "^10.4.4",
     "babel-jest": "^27.0.6",
-    "cypress": "^8.3.0",
+    "cypress": "^8.7.0",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
